# ezfalcon

./: .cruft.json  .gitignore  README.md  README.rst  _check_pots.py  _debug_potmatch.py  diag_substeps.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
diagnostics/: diagnostics_benchmark_results.npz  diagnostics_ellipsoidal_potentials_benchmark_results.npz  ellipsoidal_benchmark.py  ext_pot_benchmark.py  wrapper_benchmark.py  wrapper_benchmark_results.npz
diagnostics/convergence/: convergence_results.npy  plummer.ipynb  plummer_convergence.py
diagnostics/dt_scaling/: dt_accuracy_scaling.py
diagnostics/integration_test/: integration_testing.ipynb
diagnostics/n_particle_scaling/: nparticles_scalings.py
docs/: api.rst  changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: ezfalcon.dynamics.acceleration.self_gravity.rst  ezfalcon.dynamics.self_gravity.rst  ezfalcon.simulation.Component.rst  ezfalcon.simulation.Sim.rst  ezfalcon.tools.galpy_orbit_to_ezfalcon.rst  ezfalcon.tools.galpydfsampler.rst  ezfalcon.util.cyl2cart.rst
docs/diagnostics/: ellipsoidal_benchmark.ipynb  index.rst  selfgravity_benchmark.rst
docs/examples/: 01_Simulation_Basics.ipynb  02_Sampling_Helpers.ipynb  03_Self_Gravity.ipynb  04_External_Forces.ipynb  05_Integration_With_Multiple_Components.ipynb  EX1_Multicomponent_Shell.py  EX1_Multicomponent_Shell.rst  EX2_Disk.py  EX2_Disk.rst  EX3_GC_Stream.ipynb  EX3_GC_Stream.py  EX3_GC_Stream.rst  EX4_satellite_script.py  EX5_GC_Satellite_script.py  _run_EX2.py  index.rst
docs/examples/EX4_run_01/: config.yaml
docs/examples/EX4_run_02/: config.yaml
docs/examples/configs/: EX4_GC_stream.yaml  EX4_run_01.yaml  EX4_run_02.yaml
docs/tutorials/: 01_Simulation_Basics.ipynb  02_Sampling_Helpers.ipynb  05_Integration_With_Multiple_Components.ipynb  index.rst
docs/user_guide/: computing_component_self_gravity.rst  computing_self_gravity.rst  external_forces.rst  external_potentials.rst  index.rst  initial_conditions.rst  interoperability.rst  making_a_simulation.rst  running_a_simulation.rst  satellite_tools.rst  self_gravity.rst  self_gravity_methods.rst  simulation.rst  simulation_outputs.rst  softening_lengths.rst  units.rst
examples/: 01_Simulation_Basics.ipynb  02_Sampling_Helpers.ipynb  03_Disk_Stability.ipynb  EX4_analysis.ipynb  EX4_shell_script.ipynb  EX4_shell_script.py
examples/script_output/: EX4_shell_script_analysis.ipynb
examples/script_output/data/: bound_mask.npy  self_PE.npy  shell_mass.npy  shell_pos.npy  shell_vel.npy  star_mask.npy  times.npy
ezfalcon/: version.py
ezfalcon/dynamics/: __init__.py  _c_capsule.py  state.py
ezfalcon/dynamics/acceleration/: self_gravity.py
ezfalcon/dynamics/forces/: BaseForce.py  CompositeForce.py  ConservativeForceField.py  __init__.py  _c_force_abi.h
ezfalcon/dynamics/forces/external_force/: DynamicalFriction.py  ExternalAgamaPotential.py  ExternalGalpyPotential.py  __init__.py
ezfalcon/dynamics/forces/self_gravity/: SelfGravity.py  __init__.py  self_gravity.py
ezfalcon/dynamics/forces/self_gravity/direct_summation/: __init__.py
ezfalcon/dynamics/integration/: __init__.py  _c_integrator_abi.h  integrate.py  leapfrog.py
ezfalcon/simulation/: component.py  simulation.py
ezfalcon/tests/: direct_summation_example.ipynb  test_component.py  test_direct_summation.py  test_direct_summation_C.py  test_falcON.py  test_galpy_bridge.py  test_galpy_tools.py  test_integration.py  test_self_gravity.py  test_simulation.py  testing.ipynb
ezfalcon/tools/: __init__.py  galpy_tools.py  satellite_tools.py
ezfalcon/util/: __init__.py  _galpy_bridge.py  galpy_bridge.py  galpy_tools.py  units.py
ezfalconv2/dynamics/acceleration/: __init__.py
ezfalconv2/dynamics/integration/: integrate.py  leapfrog.py
ezfalconv2/simulation/: __init__.py  simulation.py
ezfalconv2/tests/: test_galpy_bridge.py  test_self_gravity.py
ezfalconv2/util/: coords.py  galpy_bridge.py  galpy_tools.py  units.py
licenses/: LICENSE.rst
sanity_checks/: CHECK_01_External_Potential.ipynb  CHECK_02_Origin_Singularity.ipynb  CHECK_03_df.ipynb  binaries.ipynb  integration_rename.ipynb
tutorials/: test_component.py
