[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "numpy",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "ezfalcon"
description = ""
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Gabriel Pfaffman", email = "gabriel.pfaffman@mail.utoronto.ca" },
]
dependencies = [
    "numpy",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
galpy = [
    "galpy>=1.10",
]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
    "galpy>=1.10",
    "astropy",
    "scipy"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["ezfalcon*"]

[tool.setuptools_scm]
version_file = "ezfalcon/version.py"

[tool.pytest.ini_options]
testpaths = [
  "ezfalcon",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
norecursedirs = ["ezfalconv2[\\/]_dev"]

[tool.coverage.run]
omit = [
 "ezfalcon/__init*",
 "ezfalcon/conftest.py",
 "ezfalcon/*setup_package*",
 "ezfalcon/tests/*",
 "ezfalcon/*/tests/*",
 "ezfalcon/extern/*",
 "ezfalcon/version*",
 "*/ezfalcon/__init*",
 "*/ezfalcon/conftest.py",
 "*/ezfalcon/*setup_package*",
 "*/ezfalcon/tests/*",
 "*/ezfalcon/*/tests/*",
 "*/ezfalcon/extern/*",
 "*/ezfalcon/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
